@@ -26,9 +26,61 @@
       '-I.',
     ],
 
-    'UNICODE_CFLAGS': '@UNICODE_CFLAGS@',
-    'UNICODE_LIBS': '@UNICODE_LIBS@',
+    # We use intermediate variables so that gyp properly handles white space.
+    'ATSPI2_CFLAGS': '@ATSPI2_CFLAGS@',
+    'ATSPI2_LIBS': '@ATSPI2_LIBS@',
+    'CAIRO_CFLAGS': '@CAIRO_CFLAGS@',
+    'CAIRO_LIBS': '@CAIRO_LIBS@',
+    'DLOPEN_LIBS': '@DLOPEN_LIBS@',
+    'ENCHANT_CFLAGS': '@ENCHANT_CFLAGS@',
+    'ENCHANT_LIBS': '@ENCHANT_LIBS@',
+    'FREETYPE_CFLAGS': '@FREETYPE_CFLAGS@',
+    'FREETYPE_LIBS': '@FREETYPE_LIBS@',
+    'GAIL_CFLAGS': '@GAIL_CFLAGS@',
+    'GAIL_LIBS': '@GAIL_LIBS@',
+    'GAMEPAD_CFLAGS': '@GAMEPAD_CFLAGS@',
+    'GAMEPAD_LIBS': '@GAMEPAD_LIBS@',
+    'GEOCLUE_CFLAGS': '@GEOCLUE_CFLAGS@',
+    'GEOCLUE_LIBS': '@GEOCLUE_LIBS@',
     'GLIB_CFLAGS': '@GLIB_CFLAGS@',
     'GLIB_LIBS': '@GLIB_LIBS@',
-  }
+    'GSTREAMER_CFLAGS': '@GSTREAMER_CFLAGS@',
+    'GSTREAMER_LIBS': '@GSTREAMER_LIBS@',
+    'GTK2_CFLAGS': '@GTK2_CFLAGS@',
+    'GTK2_LIBS': '@GTK2_LIBS@',
+    'GTK_CFLAGS': '@GTK_CFLAGS@',
+    'GTK_LIBS': '@GTK_LIBS@',
+    'GTK_UNIX_PRINTING_CFLAGS': '@GTK_UNIX_PRINTING_CFLAGS@',
+    'GTK_UNIX_PRINTING_LIBS': '@GTK_UNIX_PRINTING_LIBS@',
+    'JPEG_LIBS': '@JPEG_LIBS@',
+    'LIBSECRET_CFLAGS': '@LIBSECRET_CFLAGS@',
+    'LIBSECRET_LIBS': '@LIBSECRET_LIBS@',
+    'LIBSOUP_CFLAGS': '@LIBSOUP_CFLAGS@',
+    'LIBSOUP_LIBS': '@LIBSOUP_LIBS@',
+    'LIBXML_CFLAGS': '@LIBXML_CFLAGS@',
+    'LIBXML_LIBS': '@LIBXML_LIBS@',
+    'LIBXSLT_CFLAGS': '@LIBXSLT_CFLAGS@',
+    'LIBXSLT_LIBS': '@LIBXSLT_LIBS@',
+    'OLE32_LIBS': '@OLE32_LIBS@',
+    'PANGO_CFLAGS': '@PANGO_CFLAGS@',
+    'PANGO_LIBS': '@PANGO_LIBS@',
+    'PNG_LIBS': '@PNG_LIBS@',
+    'SHLWAPI_LIBS': '@SHLWAPI_LIBS@',
+    'SQLITE3_CFLAGS': '@SQLITE3_CFLAGS@',
+    'SQLITE3_LIBS': '@SQLITE3_LIBS@',
+    'UNICODE_CFLAGS': '@UNICODE_CFLAGS@',
+    'UNICODE_LIBS': '@UNICODE_LIBS@',
+    'WEBP_LIBS': '@WEBP_LIBS@',
+    'WINMM_LIBS': '@WINMM_LIBS@',
+    'XCOMPOSITE_CFLAGS': '@XCOMPOSITE_CFLAGS@',
+    'XCOMPOSITE_LIBS': '@XCOMPOSITE_LIBS@',
+    'XDAMAGE_CFLAGS': '@XDAMAGE_CFLAGS@',
+    'XDAMAGE_LIBS': '@XDAMAGE_LIBS@',
+    'XRENDER_CFLAGS': '@XRENDER_CFLAGS@',
+    'XRENDER_LIBS': '@XRENDER_LIBS@',
+    'XT_CFLAGS': '@XT_CFLAGS@',
+    'XT_LIBS': '@XT_LIBS@',
+    'ZLIB_CFLAGS': '@ZLIB_CFLAGS@',
+    'ZLIB_LIBS': '@ZLIB_LIBS@',
+  },
 }
